force-app/main/default/objects/Visit__c/fields/Check_in_At__c.field-meta.xml
<CustomField>
    <fullName>Check_in_At__c</fullName>
    <description>The start of the visit.</description>
    <label>Check-in At</label>
    <type>DateTime</type>
</CustomField>