force-app/main/default/objects/Visit__c/fields/Check_out_At__c.field-meta.xml
<CustomField>
    <fullName>Check_out_At__c</fullName>
    <description>The time when the vehicle is ready</description>
    <label>Check-out At</label>
    <type>DateTime</type>
</CustomField>