force-app/main/default/objects/Visit__c/fields/Odometer_km__c.field-meta.xml
<CustomField>
    <fullName>Odometer_km__c</fullName>
    <label>Odometer (km)</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>