force-app/main/default/objects/Visit__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>