force-app/main/default/objects/Visit__c/validationRules/Visit_Account_and_Vehicle_Account_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Visit_Account_and_Vehicle_Account_check</fullName>
    <active>true</active>
    <description>Ensures that the person booking the visit is the vehicle owner</description>
    <errorConditionFormula>Account__c  =  Vehicle__r.Account__c</errorConditionFormula>
    <errorMessage>Visit can be only booked by the vehicle owner.</errorMessage>
</ValidationRule>