force-app/main/default/objects/Visit__c/listViews/All_Visits_Service.listView-meta.xml
<ListView>
    <fullName>All_Visits_Service</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Check_in_At__c</columns>
    <columns>Check_out_At__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Visits - Service</label>
</ListView>